tests/snapshots/run_wpt_conformance__onnx_reshape__flatten__float16_3D_tensor_to_2D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (flatten) float16 3D tensor to 2D",
    "onnx",
    "PASS",
)
